# EmulatorX

./: .gitignore  README.md  index.html  nuxt.config.ts  package-lock.json  package.json  push.bat
assets/: main.scss
components/: EmulatorCard.vue
composables/: useEmulators.ts  useRomApi.ts
layouts/: default.vue
pages/: available.vue  index.vue  roms.vue  settings.vue
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: EmulatorCard.vue  Settings.vue
