[package]
name = "EmulatorX"
version = "0.1.0"
description = "EmulatorX"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emulatorx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
regex = "1.10.2"
zip = "0.6"
sevenz-rust = "0.5"
tempfile = "3.8"
once_cell = "1.18"

